# python_hw_number_19

./: .gitignore  README.md  config.py  pyproject.toml
tests/mobile/android/: conftest.py  test_search_samsung.py
tests/mobile/android/reports/: 4d7b7022-6df7-40f0-b18f-dab889f44c8a-container.json  694bcb8a-be15-47b2-8cfd-ee55a486041b-attachment.html  73c598b7-208b-4899-8306-636214ae24e1-result.json
tests/mobile/android/utils/: allure.py
tests/mobile/ios/: conftest.py  test_open_browser_iphone.py
tests/mobile/ios/utils/: allure.py
tests/mobile/utils/: allure.py
